--- a/style.css
+++ b/style.css
@@ -1370,7 +1370,7 @@ main {
     width: 100%;
     max-width: 400px;
     text-align: center;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 .login-card h2 {
@@ -1379,7 +1379,6 @@ main {
     margin-bottom: 10px;
     font-size: 1.8rem;
 }
-
 
 .login-card input {
     width: 100%;
@@ -1395,7 +1394,7 @@ main {
 
 @media (max-width: 700px) {
     .login-card {
-        padding: 25px 20px;
+        padding: 25px 20px; 
     }
 
     .login-card h2 {
@@ -1418,7 +1417,8 @@ main {
     .formulario form {
         flex: 1;
         min-width: 300px;
-        max-width: 100%;        display: flex;
+        max-width: 100%;        
+        display: flex;
         flex-direction: column;
         padding: 10px;
     }
@@ -1511,6 +1511,7 @@ main {
         font-family: 'Inter', sans-serif;
     }
 }
+
 #pag-portal {
     padding: 40px 5%;
     background-color: #f9f9f9;
@@ -1567,6 +1568,7 @@ main {
     background-color: white;
     overflow: hidden; 
 }
+
 
 .doc-header, .doc-item {
     display: grid;
@@ -1658,7 +1660,7 @@ main {
     .doc-col {
         width: 100%;
         display: flex;
-        justify-content: space-between; 
+        justify-content: space-between;
         align-items: center;
         font-size: 0.95rem;
     }
@@ -1674,12 +1676,12 @@ main {
         margin-top: 10px;
         padding-top: 15px;
         border-top: 1px solid #eee;
-        justify-content: flex-end; 
+        justify-content: flex-end;
         gap: 15px;
     }
     
     .doc-col.acoes::before {
-        display: none; /* Não mostra o texto "Ações" */
+        display: none; 
     }
 }
 
@@ -1688,7 +1690,7 @@ main {
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.2s ease;
-    white-space: nowrap; 
+    white-space: nowrap;
 }
 
 .botao-portal:hover {
@@ -1697,11 +1699,12 @@ main {
     transform: translateY(-2px); 
 }
 
+
 .botao-portal-mobile {
     background-color: #236B94;
     padding: 15px;
     width: 80%; 
     text-align: center;
     border-radius: 8px;
-    margin-top: 20px; 
+    margin-top: 20px;
 }
